# internal/handler/v1/request/permission.go
@@ -1,0 +1,5 @@
+package request
+
+type PermissionCreate struct {
+	Name   string `json:"name" validate:"required,min=5"`
+}
