# internal/handler/v1/srvc_interface.go
@@ -29,4 +29,11 @@ type (
 		GetByID(ctx context.Context, id string) (*model.Role, error)
 		Delete(ctx context.Context, id string) error
 	}
+
+	PermissionSrvc interface {
+		List(ctx context.Context, page, count int, filters, sorts map[string]string) ([]model.Permission, *dto.Pagination, error)
+		Create(ctx context.Context, name string) (*model.Permission, error)
+		GetByID(ctx context.Context, id string) (*model.Permission, error)
+		Delete(ctx context.Context, id string) error
+	}
 )
